--- a/test_data.ipynb
+++ b/test_data.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "a177ec9c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/maximos/miniconda3/envs/torch/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from music21 import converter, note, chord, harmony, meter, stream\n",
     "import numpy as np\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "59a40ee0",
    "metadata": {},
    "outputs": [
@@ -28,6 +37,14 @@
       "Pianoroll shape: (256, 100)\n",
       "Chord seq length: 256\n",
       "Chord at step 0: C#\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/maximos/miniconda3/envs/torch/lib/python3.12/site-packages/music21/stream/base.py:3694: Music21DeprecationWarning: .flat is deprecated.  Call .flatten() instead\n",
+      "  return self.iter().getElementsByClass(classFilterList)\n"
      ]
     }
    ],
@@ -51,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "a7d290ad",
    "metadata": {},
    "outputs": [
@@ -71,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "434bdb68",
    "metadata": {},
    "outputs": [],
@@ -81,12 +98,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "4be3504a",
    "metadata": {},
    "outputs": [],
    "source": [
     "tokenizer = CSGridMLMTokenizer(fixed_length=256)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ebd8fb9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'<unk>': 0, '<pad>': 1, '<s>': 2, '</s>': 3, '<nc>': 4, '<mask>': 5, 'C:maj': 6, 'C:min': 7, 'C:aug': 8, 'C:dim': 9, 'C:sus4': 10, 'C:sus2': 11, 'C:7': 12, 'C:maj7': 13, 'C:min7': 14, 'C:minmaj7': 15, 'C:maj6': 16, 'C:min6': 17, 'C:dim7': 18, 'C:hdim7': 19, 'C:maj9': 20, 'C:min9': 21, 'C:9': 22, 'C:min11': 23, 'C:11': 24, 'C:maj13': 25, 'C:min13': 26, 'C:13': 27, 'C:1': 28, 'C:5': 29, 'C': 30, 'C:7(b9)': 31, 'C:7(#9)': 32, 'C:7(#11)': 33, 'C:7(b13)': 34, 'C#:maj': 35, 'C#:min': 36, 'C#:aug': 37, 'C#:dim': 38, 'C#:sus4': 39, 'C#:sus2': 40, 'C#:7': 41, 'C#:maj7': 42, 'C#:min7': 43, 'C#:minmaj7': 44, 'C#:maj6': 45, 'C#:min6': 46, 'C#:dim7': 47, 'C#:hdim7': 48, 'C#:maj9': 49, 'C#:min9': 50, 'C#:9': 51, 'C#:min11': 52, 'C#:11': 53, 'C#:maj13': 54, 'C#:min13': 55, 'C#:13': 56, 'C#:1': 57, 'C#:5': 58, 'C#': 59, 'C#:7(b9)': 60, 'C#:7(#9)': 61, 'C#:7(#11)': 62, 'C#:7(b13)': 63, 'D:maj': 64, 'D:min': 65, 'D:aug': 66, 'D:dim': 67, 'D:sus4': 68, 'D:sus2': 69, 'D:7': 70, 'D:maj7': 71, 'D:min7': 72, 'D:minmaj7': 73, 'D:maj6': 74, 'D:min6': 75, 'D:dim7': 76, 'D:hdim7': 77, 'D:maj9': 78, 'D:min9': 79, 'D:9': 80, 'D:min11': 81, 'D:11': 82, 'D:maj13': 83, 'D:min13': 84, 'D:13': 85, 'D:1': 86, 'D:5': 87, 'D': 88, 'D:7(b9)': 89, 'D:7(#9)': 90, 'D:7(#11)': 91, 'D:7(b13)': 92, 'D#:maj': 93, 'D#:min': 94, 'D#:aug': 95, 'D#:dim': 96, 'D#:sus4': 97, 'D#:sus2': 98, 'D#:7': 99, 'D#:maj7': 100, 'D#:min7': 101, 'D#:minmaj7': 102, 'D#:maj6': 103, 'D#:min6': 104, 'D#:dim7': 105, 'D#:hdim7': 106, 'D#:maj9': 107, 'D#:min9': 108, 'D#:9': 109, 'D#:min11': 110, 'D#:11': 111, 'D#:maj13': 112, 'D#:min13': 113, 'D#:13': 114, 'D#:1': 115, 'D#:5': 116, 'D#': 117, 'D#:7(b9)': 118, 'D#:7(#9)': 119, 'D#:7(#11)': 120, 'D#:7(b13)': 121, 'E:maj': 122, 'E:min': 123, 'E:aug': 124, 'E:dim': 125, 'E:sus4': 126, 'E:sus2': 127, 'E:7': 128, 'E:maj7': 129, 'E:min7': 130, 'E:minmaj7': 131, 'E:maj6': 132, 'E:min6': 133, 'E:dim7': 134, 'E:hdim7': 135, 'E:maj9': 136, 'E:min9': 137, 'E:9': 138, 'E:min11': 139, 'E:11': 140, 'E:maj13': 141, 'E:min13': 142, 'E:13': 143, 'E:1': 144, 'E:5': 145, 'E': 146, 'E:7(b9)': 147, 'E:7(#9)': 148, 'E:7(#11)': 149, 'E:7(b13)': 150, 'F:maj': 151, 'F:min': 152, 'F:aug': 153, 'F:dim': 154, 'F:sus4': 155, 'F:sus2': 156, 'F:7': 157, 'F:maj7': 158, 'F:min7': 159, 'F:minmaj7': 160, 'F:maj6': 161, 'F:min6': 162, 'F:dim7': 163, 'F:hdim7': 164, 'F:maj9': 165, 'F:min9': 166, 'F:9': 167, 'F:min11': 168, 'F:11': 169, 'F:maj13': 170, 'F:min13': 171, 'F:13': 172, 'F:1': 173, 'F:5': 174, 'F': 175, 'F:7(b9)': 176, 'F:7(#9)': 177, 'F:7(#11)': 178, 'F:7(b13)': 179, 'F#:maj': 180, 'F#:min': 181, 'F#:aug': 182, 'F#:dim': 183, 'F#:sus4': 184, 'F#:sus2': 185, 'F#:7': 186, 'F#:maj7': 187, 'F#:min7': 188, 'F#:minmaj7': 189, 'F#:maj6': 190, 'F#:min6': 191, 'F#:dim7': 192, 'F#:hdim7': 193, 'F#:maj9': 194, 'F#:min9': 195, 'F#:9': 196, 'F#:min11': 197, 'F#:11': 198, 'F#:maj13': 199, 'F#:min13': 200, 'F#:13': 201, 'F#:1': 202, 'F#:5': 203, 'F#': 204, 'F#:7(b9)': 205, 'F#:7(#9)': 206, 'F#:7(#11)': 207, 'F#:7(b13)': 208, 'G:maj': 209, 'G:min': 210, 'G:aug': 211, 'G:dim': 212, 'G:sus4': 213, 'G:sus2': 214, 'G:7': 215, 'G:maj7': 216, 'G:min7': 217, 'G:minmaj7': 218, 'G:maj6': 219, 'G:min6': 220, 'G:dim7': 221, 'G:hdim7': 222, 'G:maj9': 223, 'G:min9': 224, 'G:9': 225, 'G:min11': 226, 'G:11': 227, 'G:maj13': 228, 'G:min13': 229, 'G:13': 230, 'G:1': 231, 'G:5': 232, 'G': 233, 'G:7(b9)': 234, 'G:7(#9)': 235, 'G:7(#11)': 236, 'G:7(b13)': 237, 'G#:maj': 238, 'G#:min': 239, 'G#:aug': 240, 'G#:dim': 241, 'G#:sus4': 242, 'G#:sus2': 243, 'G#:7': 244, 'G#:maj7': 245, 'G#:min7': 246, 'G#:minmaj7': 247, 'G#:maj6': 248, 'G#:min6': 249, 'G#:dim7': 250, 'G#:hdim7': 251, 'G#:maj9': 252, 'G#:min9': 253, 'G#:9': 254, 'G#:min11': 255, 'G#:11': 256, 'G#:maj13': 257, 'G#:min13': 258, 'G#:13': 259, 'G#:1': 260, 'G#:5': 261, 'G#': 262, 'G#:7(b9)': 263, 'G#:7(#9)': 264, 'G#:7(#11)': 265, 'G#:7(b13)': 266, 'A:maj': 267, 'A:min': 268, 'A:aug': 269, 'A:dim': 270, 'A:sus4': 271, 'A:sus2': 272, 'A:7': 273, 'A:maj7': 274, 'A:min7': 275, 'A:minmaj7': 276, 'A:maj6': 277, 'A:min6': 278, 'A:dim7': 279, 'A:hdim7': 280, 'A:maj9': 281, 'A:min9': 282, 'A:9': 283, 'A:min11': 284, 'A:11': 285, 'A:maj13': 286, 'A:min13': 287, 'A:13': 288, 'A:1': 289, 'A:5': 290, 'A': 291, 'A:7(b9)': 292, 'A:7(#9)': 293, 'A:7(#11)': 294, 'A:7(b13)': 295, 'A#:maj': 296, 'A#:min': 297, 'A#:aug': 298, 'A#:dim': 299, 'A#:sus4': 300, 'A#:sus2': 301, 'A#:7': 302, 'A#:maj7': 303, 'A#:min7': 304, 'A#:minmaj7': 305, 'A#:maj6': 306, 'A#:min6': 307, 'A#:dim7': 308, 'A#:hdim7': 309, 'A#:maj9': 310, 'A#:min9': 311, 'A#:9': 312, 'A#:min11': 313, 'A#:11': 314, 'A#:maj13': 315, 'A#:min13': 316, 'A#:13': 317, 'A#:1': 318, 'A#:5': 319, 'A#': 320, 'A#:7(b9)': 321, 'A#:7(#9)': 322, 'A#:7(#11)': 323, 'A#:7(b13)': 324, 'B:maj': 325, 'B:min': 326, 'B:aug': 327, 'B:dim': 328, 'B:sus4': 329, 'B:sus2': 330, 'B:7': 331, 'B:maj7': 332, 'B:min7': 333, 'B:minmaj7': 334, 'B:maj6': 335, 'B:min6': 336, 'B:dim7': 337, 'B:hdim7': 338, 'B:maj9': 339, 'B:min9': 340, 'B:9': 341, 'B:min11': 342, 'B:11': 343, 'B:maj13': 344, 'B:min13': 345, 'B:13': 346, 'B:1': 347, 'B:5': 348, 'B': 349, 'B:7(b9)': 350, 'B:7(#9)': 351, 'B:7(#11)': 352, 'B:7(b13)': 353}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tokenizer.vocab)"
    ]
   },
   {
