--- a/test_generate.ipynb
+++ b/test_generate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "1e491e19",
    "metadata": {},
    "outputs": [],
@@ -14,13 +14,12 @@
     "from data_utils import CSGridMLMDataset, CSGridMLM_collate_fn\n",
     "from torch.utils.data import DataLoader\n",
     "from train_utils import apply_masking\n",
-    "from generate_utils import random_progressive_generate, structured_progressive_generate,\\\n",
-    "    load_model, overlay_generated_harmony, save_harmonized_score"
+    "from generate_utils import generate_files_with_base2, generate_files_with_base2, load_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "6ad30c26",
    "metadata": {},
    "outputs": [],
@@ -33,85 +32,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "6845a169",
+   "execution_count": 3,
+   "id": "02945c83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask_token_id = tokenizer.mask_token_id\n",
-    "pad_token_id = tokenizer.pad_token_id\n",
-    "nc_token_id = tokenizer.nc_token_id"
+    "# curriculum_type = 'random'\n",
+    "curriculum_type = 'base2'\n",
+    "subfolder = 'all12'\n",
+    "device_name = 'cuda:2'\n",
+    "model = load_model(\n",
+    "    curriculum_type=curriculum_type,\n",
+    "    subfolder=subfolder,\n",
+    "    device_name='cuda:2',\n",
+    "    tokenizer=tokenizer,\n",
+    "    pianoroll_dim=100\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "02945c83",
+   "execution_count": 4,
+   "id": "45ae09cf",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "GridMLMMelHarm(\n",
-       "  (condition_proj): Linear(in_features=16, out_features=512, bias=True)\n",
-       "  (melody_proj): Linear(in_features=100, out_features=512, bias=True)\n",
-       "  (harmony_embedding): Embedding(354, 512)\n",
-       "  (dropout): Dropout(p=0.3, inplace=False)\n",
-       "  (stage_embedding): Embedding(10, 64)\n",
-       "  (stage_proj): Linear(in_features=576, out_features=512, bias=True)\n",
-       "  (encoder): TransformerEncoder(\n",
-       "    (layers): ModuleList(\n",
-       "      (0-7): 8 x TransformerEncoderLayer(\n",
-       "        (self_attn): MultiheadAttention(\n",
-       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=512, out_features=512, bias=True)\n",
-       "        )\n",
-       "        (linear1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (dropout): Dropout(p=0.3, inplace=False)\n",
-       "        (linear2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (norm1): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
-       "        (norm2): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
-       "        (dropout1): Dropout(p=0.3, inplace=False)\n",
-       "        (dropout2): Dropout(p=0.3, inplace=False)\n",
-       "      )\n",
-       "    )\n",
-       "  )\n",
-       "  (output_head): Linear(in_features=512, out_features=354, bias=True)\n",
-       "  (input_norm): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
-       "  (output_norm): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26203106\n"
+     ]
     }
    ],
    "source": [
-    "# curriculum_type = 'random'\n",
-    "curriculum_type = 'base2'\n",
-    "device_name = 'cuda:1'\n",
-    "if device_name == 'cpu':\n",
-    "    device = torch.device('cpu')\n",
-    "else:\n",
-    "    if torch.cuda.is_available():\n",
-    "        device = torch.device(device_name)\n",
-    "    else:\n",
-    "        print('Selected device not available: ' + device_name)\n",
-    "model = GridMLMMelHarm(\n",
-    "    chord_vocab_size=len(tokenizer.vocab),\n",
-    "    device=device\n",
-    ")\n",
-    "model_path = 'saved_models/' + curriculum_type +  '.pt'\n",
-    "# checkpoint = torch.load(model_path, map_location=device_name, weights_only=True)\n",
-    "checkpoint = torch.load(model_path, map_location=device_name)\n",
-    "model.load_state_dict(checkpoint)\n",
-    "model.eval()\n",
-    "model.to(device)"
+    "def count_parameters(model):\n",
+    "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "print(count_parameters(model))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "e9b8c333",
    "metadata": {},
    "outputs": [
@@ -136,212 +97,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "797e6f56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "encoded = tokenizer.encode(data_files[333])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "dffcc448",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['input_tokens', 'input_ids', 'pianoroll', 'time_signature', 'attention_mask', 'skip_steps', 'melody_part', 'ql_per_quantum'])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(encoded.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "52a3756c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "melody_grid = torch.stack([torch.tensor(encoded['pianoroll'], dtype=torch.float)])\n",
-    "conditioning_vec = torch.stack([torch.tensor(encoded['time_signature'], dtype=torch.float)])\n",
-    "harmony_gt = torch.stack([torch.tensor(encoded['input_ids'], dtype=torch.float)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "cf7caa70",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if curriculum_type == 'base2':\n",
-    "    generated_harmony = structured_progressive_generate(\n",
-    "        model=model,\n",
-    "        melody_grid=melody_grid,\n",
-    "        conditioning_vec=conditioning_vec,\n",
-    "        num_stages=10,\n",
-    "        mask_token_id=tokenizer.mask_token_id,\n",
-    "        temperature=1.0,\n",
-    "        strategy='sample',#'topk',\n",
-    "        pad_token_id=pad_token_id,      # token ID for <pad>\n",
-    "        nc_token_id=nc_token_id,       # token ID for <nc>\n",
-    "        force_fill=True         # disallow <pad>/<nc> before melody ends\n",
-    "    )\n",
-    "else:\n",
-    "    generated_harmony = random_progressive_generate(\n",
-    "        model=model,\n",
-    "        melody_grid=melody_grid,\n",
-    "        conditioning_vec=conditioning_vec,\n",
-    "        num_stages=10,\n",
-    "        mask_token_id=tokenizer.mask_token_id,\n",
-    "        temperature=1.0,\n",
-    "        strategy='sample',# 'topk',\n",
-    "        pad_token_id=pad_token_id,      # token ID for <pad>\n",
-    "        nc_token_id=nc_token_id,       # token ID for <nc>\n",
-    "        force_fill=True         # disallow <pad>/<nc> before melody ends\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "30a895ca",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "output_tokens\n",
-      "['G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n",
-      "harmony_gt_tokens\n",
-      "['C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n"
-     ]
-    }
-   ],
-   "source": [
-    "output_tokens = []\n",
-    "for i,t in enumerate(generated_harmony[0].tolist()):\n",
-    "    output_tokens.append( tokenizer.ids_to_tokens[t] )\n",
-    "print('output_tokens')\n",
-    "print(output_tokens)\n",
-    "\n",
-    "harmony_gt_tokens = []\n",
-    "for i,t in enumerate(harmony_gt[0].tolist()):\n",
-    "    harmony_gt_tokens.append( tokenizer.ids_to_tokens[t] )\n",
-    "print('harmony_gt_tokens')\n",
-    "print(harmony_gt_tokens)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "99e6d2cc",
+   "execution_count": 7,
+   "id": "1050a9ee",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/maximos/miniconda3/envs/torch/lib/python3.12/site-packages/music21/base.py:559: UserWarning: Setting an ID that could be mistaken for a memory location is discouraged: got 136749889296080\n",
-      "  warnings.warn(msg)\n"
+      "/home/maximos/miniconda3/envs/torch/lib/python3.12/site-packages/music21/base.py:559: UserWarning: Setting an ID that could be mistaken for a memory location is discouraged: got 128516249091680\n",
+      "  warnings.warn(msg)\n",
+      "libpng warning: iCCP: known incorrect sRGB profile\n",
+      "Error at line 30 col 47: no instrument found for part 'Pdc6e35c6266dd43964141c98a58ed639'\n",
+      "Error at line 443 col 47: no instrument found for part 'Pb992f6fdb5ab535ad8db1ad98f384705'\n",
+      "convert <examples_musicXML/all12/base2//gen_0.mxl>...\n",
+      "\tto <examples_MIDI/all12/base2//gen_0.mid>\n",
+      "... success!\n",
+      "libpng warning: iCCP: known incorrect sRGB profile\n",
+      "Error at line 30 col 47: no instrument found for part 'P4acdb62bbf5f97d092ba9b01e7ab1e0a'\n",
+      "Error at line 443 col 47: no instrument found for part 'P39a991945c7a373b16bb2148145cff97'\n",
+      "convert <examples_musicXML/all12/base2//real_0.mxl>...\n",
+      "\tto <examples_MIDI/all12/base2//real_0.mid>\n",
+      "... success!\n"
      ]
     }
    ],
    "source": [
-    "score = overlay_generated_harmony(encoded['melody_part'], output_tokens, encoded['ql_per_quantum'], encoded['skip_steps'])\n",
-    "save_harmonized_score(score, out_path=\"harmonized_output.mxl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "71459b63",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0.0} <music21.metadata.Metadata object at 0x7c5fb2528830>\n",
-      "{0.0} <music21.stream.Part 0x7c5f90599520>\n",
-      "    {0.0} <music21.stream.Measure 1 offset=0.0>\n",
-      "        {0.0} <music21.clef.TrebleClef>\n",
-      "        {0.0} <music21.tempo.MetronomeMark allegretto Quarter=106>\n",
-      "        {0.0} <music21.key.KeySignature of 7 sharps>\n",
-      "        {0.0} <music21.meter.TimeSignature 4/4>\n",
-      "        {0.0} <music21.note.Note E->\n",
-      "        {1.5} <music21.note.Note F>\n",
-      "        {2.5} <music21.note.Note F>\n",
-      "    {4.0} <music21.stream.Measure 2 offset=4.0>\n",
-      "        {0.0} <music21.note.Note E->\n",
-      "        {1.0} <music21.note.Note F>\n",
-      "        {1.5} <music21.note.Note F>\n",
-      "        {2.5} <music21.note.Rest quarter>\n",
-      "        {3.5} <music21.note.Note B->\n",
-      "    {8.0} <music21.stream.Measure 3 offset=8.0>\n",
-      "        {0.0} <music21.note.Note E->\n",
-      "        {1.0} <music21.note.Note F>\n",
-      "        {1.5} <music21.note.Note F>\n",
-      "        {2.5} <music21.note.Note C#>\n",
-      "        {3.5} <music21.note.Note G#>\n",
-      "    {12.0} <music21.stream.Measure 4 offset=12.0>\n",
-      "        {0.0} <music21.note.Note B->\n",
-      "        {0.5} <music21.note.Note G#>\n",
-      "        {1.5} <music21.note.Note F>\n",
-      "        {1.75} <music21.note.Note E->\n",
-      "        {2.0} <music21.note.Note C#>\n",
-      "        {3.0} <music21.note.Rest quarter>\n",
-      "    {16.0} <music21.stream.Measure 5 offset=16.0>\n",
-      "        {0.0} <music21.note.Note G#>\n",
-      "        {1.0} <music21.note.Note C#>\n",
-      "        {1.5} <music21.note.Note C#>\n",
-      "        {2.5} <music21.note.Rest dotted-quarter>\n",
-      "    {20.0} <music21.stream.Measure 6 offset=20.0>\n",
-      "        {0.0} <music21.note.Note A>\n",
-      "        {1.0} <music21.note.Note C#>\n",
-      "        {1.5} <music21.note.Note C#>\n",
-      "        {2.5} <music21.note.Note E->\n",
-      "        {3.5} <music21.note.Note F>\n",
-      "    {24.0} <music21.stream.Measure 7 offset=24.0>\n",
-      "        {0.0} <music21.note.Note F>\n",
-      "        {1.0} <music21.note.Rest dotted-half>\n",
-      "        {4.0} <music21.bar.Barline type=final>\n",
-      "{0.0} <music21.stream.Part 0x7c5f907bf980>\n",
-      "    {0.0} <music21.stream.Measure 1 offset=0.0>\n",
-      "        {0.0} <music21.clef.TrebleClef>\n",
-      "        {0.0} <music21.tempo.MetronomeMark allegretto Quarter=106>\n",
-      "        {0.0} <music21.key.KeySignature of 7 sharps>\n",
-      "        {0.0} <music21.meter.TimeSignature 4/4>\n",
-      "        {0.0} <music21.chord.Chord G#3 B#3 D#4>\n",
-      "    {4.0} <music21.stream.Measure 2 offset=4.0>\n",
-      "        {0.0} <music21.chord.Chord B-3 D-4 F4>\n",
-      "        {3.0} <music21.chord.Chord F#3 A#3 C#4>\n",
-      "    {8.0} <music21.stream.Measure 3 offset=8.0>\n",
-      "        {0.0} <music21.chord.Chord F#3 A#3 C#4>\n",
-      "        {2.0} <music21.chord.Chord C#3 E#3 G#3>\n",
-      "    {12.0} <music21.stream.Measure 4 offset=12.0>\n",
-      "        {0.0} <music21.chord.Chord F#3 A#3 C#4>\n",
-      "        {2.0} <music21.chord.Chord G#3 B#3 D#4>\n",
-      "    {16.0} <music21.stream.Measure 5 offset=16.0>\n",
-      "        {0.0} <music21.chord.Chord B-3 D-4 F4>\n",
-      "    {20.0} <music21.stream.Measure 6 offset=20.0>\n",
-      "        {0.0} <music21.chord.Chord F#3 A#3 C#4>\n",
-      "    {24.0} <music21.stream.Measure 7 offset=24.0>\n",
-      "        {0.0} <music21.chord.Chord F#3 A#3 C#4>\n",
-      "        {1.0} <music21.bar.Barline type=final>\n"
-     ]
-    }
-   ],
-   "source": [
-    "score.show('t')"
+    "val_idx = 0\n",
+    "\n",
+    "input_f = data_files[val_idx]\n",
+    "\n",
+    "mxl_folder = 'examples_musicXML/' + subfolder + '/' + curriculum_type + '/' + '/'\n",
+    "midi_folder = 'examples_MIDI/' + subfolder + '/' + curriculum_type + '/' + '/'\n",
+    "os.makedirs(mxl_folder, exist_ok=True)\n",
+    "os.makedirs(midi_folder, exist_ok=True)\n",
+    "\n",
+    "gen_harm, real_harm = generate_files_with_base2(\n",
+    "    model=model,\n",
+    "    tokenizer=tokenizer,\n",
+    "    input_f=input_f,\n",
+    "    mxl_folder=mxl_folder,\n",
+    "    midi_folder=midi_folder,\n",
+    "    name_suffix=0\n",
+    ")"
    ]
   }
  ],
